// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@controller and @controller() 1`] = `
Controller {
  "authorizationMode": "unauthorized",
  "mode": "client",
  "throwOnError": true,
}
`;

exports[`@controller and @controller() 2`] = `
Controller {
  "authorizationMode": "unauthorized",
  "mode": "client",
  "throwOnError": true,
}
`;

exports[`@controller and @controller() 3`] = `
Controller {
  "authorizationMode": "unauthorized",
  "mode": "server",
  "throwOnError": true,
}
`;

exports[`\`wrappedFetch\` with a \`.dump()\` route 1`] = `
User {
  "email": "test@example.com",
  "password": "asdfsadf",
}
`;

exports[`\`wrappedFetch\` with a \`.dump()\` route and an array 1`] = `
Array [
  User {
    "email": "test1@example.com",
  },
  User {
    "email": "test2@example.com",
  },
  User {
    "email": "test3@example.com",
  },
]
`;
